# Rust

./: .gitignore  Cargo.toml  README.md  tasks.json
projects/: main.rs
projects/chat/server/: .dockerignore  Cargo.toml  Dockerfile  nginx.conf  start.sh  websocket.conf
projects/chat/server/src/: main.rs
projects/chat/server/src/html/: index.html  mod.rs
projects/compression/: Cargo.toml
projects/compression/src/: main.rs
projects/compression/src/lz77/: mod.rs
projects/crusty/: Cargo.toml
projects/crusty/src/: main.rs
projects/crusty/src/server/: mod.rs
projects/image/: Cargo.toml
projects/image/src/: main.rs
projects/neuralnetwork/src/: main.rs
projects/shortener/: Cargo.toml
projects/shortener/src/: main.rs
projects/shorterner/: mod.rs
projects/tmanager/: Cargo.toml
projects/tmanager/src/: main.rs
src/: main.rs  task-manager.rs
src/chat/server/: mod.rs
src/chat/server/html/: mod.rs
src/shorterner/: mod.rs
src/tmanager/: mod.rs
